LiveSlope-frontend/src/styles/headerAndFooter.css
.header{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
    padding: 5px 20px;
    background-color: var(--secondary-background-color);
    color: var(--text-color);
    width: 100%;
    height: 100px;
    position: relative;
    top: 0;
    z-index: 10;
}

.footer{
    display: none;
}


.icons{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
    width: 30%;
    gap: 30px;
}

.button {
    background-color: var(--button-background-color);
    color: var(--text-color);
    border: none;
    border-radius: 5px;
    padding: 10px 20px;
    cursor: pointer;
    transition: scale 0.1s;
}

.button:hover {
    scale: 1.03;
}

.button:active {
    scale: 0.97;
}

.menu{
    display: none;
}

.icon{
    width: 40px;
    height: 40px;
    max-height: 90%;
    aspect-ratio: 1 / 1;
    cursor: pointer;
    transition: scale 0.1s;
}

.icon:hover {
    scale: 1.1;
}

.icon:active {
    scale: 0.9;
}

.popup-profile{
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 100%;
}

.popup-profile h2{
    align-self: center;
    margin: 0;
}

.popup-profile form{
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.popup-profile label{
    width: fit-content;
    font-weight: 500;
}

.popup-profile input{
    padding: 8px;
    border: 1px solid var(--text-color);
    border-radius: 4px;
    background-color: var(--background-color);
    color: var(--text-color);
}

.popup-profile button{
    cursor: pointer;
    background: var(--button-background-color);
    color: var(--text-color);
    padding: 10px 20px;
    border-radius: 5px;
    transition: scale 0.1s;
    z-index: 1000;
    width: 100%;
}

.form-errors{
    color: red;
    font-size: 0.9em;
    margin-top: -10px;
    margin-left: 10px;
}

.panel{
    position: fixed;
    display: flex;
    flex-direction: column;
    gap: 5px;
    background-color: var(--background-color);
    top: 100px;
    right: 20px;
    z-index: 1500;
    box-sizing: border-box;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.panel h3{
    margin-top: 0;
    align-self: center;
}

.panel button{
    cursor: pointer;
    background-color: var(--button-background-color);
    color: var(--text-color);
    padding: 10px 20px;
    border-radius: 5px;
    transition: scale 0.1s;
    width: 100%;
}

.panel .red-button{
    background-color: red;
    color: white;
}

.favorites{
    position: fixed;
    bottom: 100px;
    right: 30px;
    background: var(--background-color);
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0,0,0,0.1);
    height: fit-content;
    max-height: 500px;
    width: 300px;
    overflow-y: auto;
    scrollbar-gutter: stable;
    z-index: 1000;
}

.favorites ul{
    list-style: none;
    box-sizing: border-box;
    padding: 10px;
    margin: 0;
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 10px;
}


@media (max-width: 600px) {
    .icons{
        display: none;
    }
    .footer{
        display: flex;
        flex-direction: row;
        align-items: center;
        box-sizing: border-box;
        padding: 10px 20px;
        background-color: var(--secondary-background-color);
        color: var(--text-color);
        width: 100%;
        height: 100px;
        z-index: 10;
        justify-content: space-around;
    }

    .menu{
        display: flex;
        position: relative;
    }

    .menu-icon{
        font-size: 2em;
        cursor: pointer;
        background: none;
        border: none;
        width: fit-content;
        height: fit-content;
        padding: 0;
        color: var(--text-color);
        transition: scale 0.1s;
    }

    .menu-icon:active {
        scale: 0.9;
    }

    .menu-icon:focus{
        outline: none;
    }

    .menu-items{
        display: flex;
        flex-direction: column;
        position: absolute;
        gap: 10px;
        top: 80px;
        right: 0;
        background-color: var(--background-color);
        padding: 10px;
        border-radius: 5px;
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
        z-index: 1000;
    }

    .menu-item{
        text-decoration: none;
        color: var(--text-color);
        font-weight: 500;
        padding: 5px;
    }

    .panel{
        top: auto;
        bottom: auto;
        left: 20px;
        width: auto;
    }
}

@media (prefers-color-scheme: dark) {
    .icon {
        filter: invert(80%);
    }
}

